cambio de footer

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,7 +5,7 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url(https://tse2.mm.bing.net/th?id=OIP.tr47vXRZX0dEIlZRQbgh2QHaEK&pid=Api&P=0&h=180));
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
